<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".GetRequests">

            <EditText
                android:id="@+id/userIDText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/userID"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/getAllButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:onClick="callGetRequestALL"
                android:text="@string/getAllButton"
                app:layout_constraintBaseline_toBaselineOf="@+id/getByIdButton"
                app:layout_constraintEnd_toStartOf="@+id/getByIdButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/getByIdButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:onClick="callGetRequestID"
                android:text="@string/getUserId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/getAllButton"
                app:layout_constraintTop_toBottomOf="@+id/userIDText" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_get_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/getAllButton"/>

            <ProgressBar
                android:id="@+id/progressBarGet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/getAllButton" />

        </android.support.constraint.ConstraintLayout>

    </TableLayout>
</ScrollView>

